k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: campusbite
  labels:
    app.kubernetes.io/part-of: campusbite
    campus.finki/project: cafeteria-ordering
