k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  labels:
    app.kubernetes.io/part-of: campusbite
    app.kubernetes.io/component: web
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/component: web
  template:
    metadata:
      labels:
        app.kubernetes.io/part-of: campusbite
        app.kubernetes.io/component: web
    spec:
      containers:
        - name: web
          image: campusbite-frontend
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          startupProbe:
            httpGet:
              path: /ready
              port: 80
            periodSeconds: 5
            failureThreshold: 12
          readinessProbe:
            httpGet:
              path: /ready
              port: 80
            periodSeconds: 8
          livenessProbe:
            httpGet:
              path: /ready
              port: 80
            periodSeconds: 20
          resources:
            requests:
              cpu: 25m
              memory: 32Mi
            limits:
              memory: 64Mi
