k8s/menu-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: menu-service
  labels:
    app.kubernetes.io/part-of: campusbite
    app.kubernetes.io/component: menu
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/component: menu
  template:
    metadata:
      labels:
        app.kubernetes.io/part-of: campusbite
        app.kubernetes.io/component: menu
    spec:
      containers:
        - name: menu
          image: campusbite-menu
          imagePullPolicy: Always
          ports:
            - containerPort: 8001
          startupProbe:
            httpGet:
              path: /health
              port: 8001
            periodSeconds: 5
            failureThreshold: 18
          readinessProbe:
            httpGet:
              path: /health
              port: 8001
            periodSeconds: 8
          livenessProbe:
            httpGet:
              path: /health
              port: 8001
            periodSeconds: 20
          resources:
            requests:
              cpu: 25m
              memory: 96Mi
            limits:
              memory: 256Mi
