k8s/mongo-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongo
  labels:
    app.kubernetes.io/part-of: campusbite
    app.kubernetes.io/component: mongo
spec:
  serviceName: mongo
  replicas: 3
  selector:
    matchLabels:
      app.kubernetes.io/component: mongo
  template:
    metadata:
      labels:
        app.kubernetes.io/part-of: campusbite
        app.kubernetes.io/component: mongo
    spec:
      containers:
        - name: mongodb
          image: mongo:7.0
          ports:
            - name: mongodb
              containerPort: 27017
          command:
            - mongod
            - --replSet
            - rs0
            - --bind_ip_all
          volumeMounts:
            - name: mongo-data
              mountPath: /data/db
            - name: mongo-config
              mountPath: /etc/mongo/mongod.conf
              subPath: mongod.conf
          readinessProbe:
            tcpSocket:
              port: 27017
            initialDelaySeconds: 8
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: 27017
            initialDelaySeconds: 20
            periodSeconds: 20
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              memory: 256Mi
      volumes:
        - name: mongo-config
          configMap:
            name: mongo-cafeteria-config
            items:
              - key: mongod.conf
                path: mongod.conf
  volumeClaimTemplates:
    - metadata:
        name: mongo-data
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 1Gi
