k8s/order-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-service
  labels:
    app.kubernetes.io/part-of: campusbite
    app.kubernetes.io/component: orders
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/component: orders
  template:
    metadata:
      labels:
        app.kubernetes.io/part-of: campusbite
        app.kubernetes.io/component: orders
    spec:
      containers:
        - name: orders
          image: campusbite-order
          imagePullPolicy: Always
          ports:
            - containerPort: 8002
          startupProbe:
            httpGet:
              path: /health
              port: 8002
            periodSeconds: 5
            failureThreshold: 18
          readinessProbe:
            httpGet:
              path: /health
              port: 8002
            periodSeconds: 8
          livenessProbe:
            httpGet:
              path: /health
              port: 8002
            periodSeconds: 20
          resources:
            requests:
              cpu: 25m
              memory: 96Mi
            limits:
              memory: 256Mi
