k8s/menu-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: menu-service
  labels:
    app.kubernetes.io/part-of: campusbite
    app.kubernetes.io/component: menu
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/component: menu
  ports:
    - name: http
      port: 8001
      targetPort: 8001
