k8s/order-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: order-service
  labels:
    app.kubernetes.io/part-of: campusbite
    app.kubernetes.io/component: orders
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/component: orders
  ports:
    - name: http
      port: 8002
      targetPort: 8002
