k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: campusbite
  labels:
    app.kubernetes.io/part-of: campusbite
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  ingressClassName: traefik
  rules:
    - host: campusbite.local
      http:
        paths:
          - path: /api/menu
            pathType: Prefix
            backend:
              service:
                name: menu-service
                port:
                  number: 8001
          - path: /api/orders
            pathType: Prefix
            backend:
              service:
                name: order-service
                port:
                  number: 8002
          - path: /api/notifications
            pathType: Prefix
            backend:
              service:
                name: notify-service
                port:
                  number: 8003
          - path: /api/auth
            pathType: Prefix
            backend:
              service:
                name: auth-service
                port:
                  number: 8004
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
